test/core/errors/packages_error/zs/ambiguous_single_symbol_import_error/imported.zs
package ambiguous_single_symbol_import_error.imported;

const uint32 CONST = 13;
